styles/notion.css
:root {
  --fg-color: rgb(0, 0, 0) !important;
  --fg-color-0: rgba(55, 53, 47, 0.09);
  --fg-color-1: rgba(55, 53, 47, 0.16);
  --fg-color-2: rgba(55, 53, 47, 0.4);
  --fg-color-3: rgba(55, 53, 47, 0.6);
  --fg-color-4: #000;
  --fg-color-5: rgba(55, 53, 47, 0.024);
  --fg-color-6: rgba(55, 53, 47, 0.8);
  --fg-color-icon: var(--fg-color);

  --bg-color: #fff;
  --bg-color-0: rgba(135, 131, 120, 0.15);
  --bg-color-1: rgb(247, 246, 243);
  --bg-color-2: rgba(135, 131, 120, 0.15);

  --select-color-0: rgb(46, 170, 220);
  --select-color-1: rgba(45, 170, 219, 0.3);
  --select-color-2: #ffffff;

  --notion-red: rgb(224, 62, 62);
  --notion-pink: rgb(173, 26, 114);
  --notion-blue: rgb(37, 99, 235);
  --notion-purple: rgb(105, 64, 165);
  --notion-teal: rgb(15, 123, 108);
  --notion-yellow: rgb(223, 171, 1);
  --notion-orange: rgb(217, 115, 13);
  --notion-brown: rgb(100, 71, 58);
  --notion-gray: rgb(155, 154, 151);

  --notion-red_background: rgb(251, 228, 228);
  --notion-pink_background: rgb(244, 223, 235);
  --notion-blue_background: rgb(219, 234, 254);
  --notion-purple_background: rgb(234, 228, 242);
  --notion-teal_background: rgb(221, 237, 234);
  --notion-yellow_background: rgb(251, 243, 219);
  --notion-orange_background: rgb(250, 235, 221);
  --notion-brown_background: rgb(233, 229, 227);
  --notion-gray_background: rgb(241 241 239);
  --notion-green_background: rgb(219, 237, 219);
  --notion-default_background: rgba(227, 226, 224);

  --notion-red_background_co: rgba(251, 228, 228, 0.3);
  --notion-pink_background_co: rgba(244, 223, 235, 0.3);
  --notion-blue_background_co: rgba(219, 234, 254, 0.3);
  --notion-purple_background_co: rgba(234, 228, 242, 0.3);
  --notion-teal_background_co: rgba(221, 237, 234, 0.3);
  --notion-yellow_background_co: rgba(251, 243, 219, 0.3);
  --notion-orange_background_co: rgba(250, 235, 221, 0.3);
  --notion-brown_background_co: rgba(233, 229, 227, 0.3);
  --notion-gray_background_co: rgba(241, 241, 239, 0.3);
  --notion-green_background_co: rgba(219, 237, 219, 0.3);
  --notion-default_background_co: rgba(227, 226, 224, 0.3);

  --notion-item-blue: rgba(0, 120, 223, 0.2);
  --notion-item-orange: rgba(245, 93, 0, 0.2);
  --notion-item-green: rgba(0, 135, 107, 0.2);
  --notion-item-pink: rgba(221, 0, 129, 0.2);
  --notion-item-brown: rgba(140, 46, 0, 0.2);
  --notion-item-red: rgba(255, 0, 26, 0.2);
  --notion-item-yellow: rgba(233, 168, 0, 0.2);
  --notion-item-default: rgba(206, 205, 202, 0.5);
  --notion-item-purple: rgba(103, 36, 222, 0.2);
  --notion-item-gray: rgba(155, 154, 151, 0.4);

  --notion-max-width: 720px;
  --notion-header-height: 45px;
}

.notion {
  font-size: 16px;
  line-height: 1.5;
  color: var(--fg-color);
  caret-color: var(--fg-color);
  font-family: inherit !important;
}

.notion > * {
  padding: 3px 0;
}

.notion * {
  margin-block-start: 0;
  margin-block-end: 0;
}

.notion *::selection {
  background: var(--select-color-1);
}

.notion *,
.notion *:focus {
  outline: 0;
}

.notion-page-content {
  width: 100%;
  display: flex;
  flex-direction: column;
}

@media (min-width: 1300px) and (min-height: 300px) {
  .notion-page-content-has-aside {
    display: flex;
    flex-direction: row;
    width: calc((100vw + var(--notion-max-width)) / 2);
  }

  .notion-page-content-has-aside .notion-aside {
    display: flex;
  }

  .notion-page-content-has-aside .notion-page-content-inner {
    width: var(--notion-max-width);
    max-width: var(--notion-max-width);
  }
}

.notion-page-content-inner {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.notion-aside {
  position: sticky;
  top: calc(88px);
  align-self: flex-start;
  flex: 1;
  flex-direction: column;
  align-items: center;
}

.notion-aside-table-of-contents {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-height: calc(100vh - 148px - 16px);
  overflow: hidden auto;
  min-width: 222px;
  overflow: auto;
}

.notion-aside-table-of-contents-header {
  text-transform: uppercase;
  font-weight: 500;
  font-size: 1.1em;
  word-break: break-word;
}

.notion-aside-table-of-contents .notion-table-of-contents-item {
  line-height: 1;
}

.notion-aside-table-of-contents
  .notion-table-of-contents-item-indent-level-0:first-of-type {
  margin-top: 0;
}

.notion-aside-table-of-contents .notion-table-of-contents-item-indent-level-0 {
  margin-top: 0.25em;
}

.notion-aside-table-of-contents .notion-table-of-contents-item-indent-level-1 {
  font-size: 13px;
}

.notion-aside-table-of-contents .notion-table-of-contents-item-indent-level-2 {
  font-size: 12px;
}

.notion-aside-table-of-contents .notion-table-of-contents-item-body {
  border: 0 none;
}

.notion-table-of-contents-active-item {
  color: var(--select-color-2) !important;
}

.notion-app {
  position: relative;
  background: var(--bg-color);
  min-height: 100vh;
}

.notion-viewport {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -10;
  pointer-events: none;
}

.medium-zoom-overlay {
  z-index: 300;
  -webkit-backdrop-filter: blur(5px);
  backdrop-filter: blur(5px);
}

.medium-zoom-image {
  border-radius: 0;
}

.medium-zoom-image--opened {
  z-index: 301;
  /* width: auto !important; */
}

@media (max-width: 768px) {
  .medium-zoom-image--opened {
    object-fit: fill !important;
    height: auto !important;
  }
}

@media (min-width: 768px) {
  .medium-zoom-image--opened {
    object-fit: scale-down !important;
  }
}

.notion-frame {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
}

.notion-page-scroller {
  position: relative;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  align-items: center;
  min-height: calc(100vh - var(--notion-header-height));
}

.notion-red,
.notion-red_co {
  color: var(--notion-red);
}
.notion-pink,
.notion-pink_co {
  color: var(--notion-pink);
}
.notion-blue,
.notion-blue_co {
  color: var(--notion-blue);
}
/* ... */

